--- a/sample/src/main/res/layout/activity_sample.xml
+++ b/sample/src/main/res/layout/activity_sample.xml
@@ -5,7 +5,7 @@
    android:layout_height="match_parent"
    tools:context="com.codewaves.stickyheadergrid.sample.SampleActivity">
 
-   <android.support.v7.widget.RecyclerView android:id="@+id/recycler"
+   <androidx.recyclerview.widget.RecyclerView android:id="@+id/recycler"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:scrollbars="vertical"
